--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title> Barry's Burgers | Home </title>
-<style href="css/main.css" />
+  <style href="css/main.css"></style>
 </head>
 <body>
 <div class="title">
