--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title> Barry's Burgers | Home </title>
-  <style href="css/main.css"></style>
+  <link href="css/main.css" rel="styleshheet"></style>
+  <link href="http://fonts.cdnfonts.com/css/bukhari-script" rel="stylesheet">
 </head>
 <body>
 <div class="title">
