--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title> Barry's Burgers | Home </title>
-  <link href="css/main.css" rel="styleshheet"></style>
+  <link href="css/main.css" rel="stylesheet"></style>
   <link href="http://fonts.cdnfonts.com/css/bukhari-script" rel="stylesheet">
 </head>
 <body>
