--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="title">
-<image href="/assets/logo.png"><h1> Barry's Burgers </h1>
+  <image href="/assets/logo.png">Logo</image><h1> Barry's Burgers </h1>
 </div>
 </body>
 </html>
