--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
-<title> Barry's Burgers | Home </title>
+  <title> Barry's Burgers | Home </title>
   <link href="css/main.css" rel="stylesheet"></style>
-  <link href="http://fonts.cdnfonts.com/css/bukhari-script" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/assets/logo.png">
 </head>
 <body>
 <div class="title">
-  <image src="/assets/logo.png" alt="logo"><h1> Barry's Burgers </h1>
+  <image src="/assets/logo.png" alt="logo">
 </div>
 </body>
 </html>
