--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="title">
-  <image src="/assets/logo.png" alt="logo">
+  <image src="/assets/logo.png" alt="logo"> <h1> Barrys's Burgers </h1>
 </div>
 </body>
 </html>
