--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 <div class="title">
-  <image src="/assets/logo.png" alt="logo"> <h1> Barrys's Burgers </h1>
+  <image src="/assets/logo.png" alt="logo">
+</div>
+<div class="menu">
+  <button>Read More</button>
+  <div class="menu-content">
+  <a href="/menu/">Menu</a>
+  <a href="/images/">Images</a>
+  <a href="/contact/">Contact</a>
+  </div>
 </div>
 </body>
 </html>
