--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <image src="/assets/logo.png" alt="logo">
 </div>
 <div class="menu">
-  <button class="menu">Read More</button>
+  <button class="menubutton">Read More</button>
   <div class="menu-content">
   <a href="/menu/">Menu</a>
   <a href="/images/">Images</a>
